--- a/pages/ad.html
+++ b/pages/ad.html
@@ -11,175 +11,207 @@
     <!-- Корректировка стиля. -->
     <link rel="stylesheet" href="../fonts/stylesheet.css">
     <link rel="stylesheet" href="../css/global.css">
+    <link rel="stylesheet" href="../css/search.css">
     <link rel="stylesheet" href="../css/ads_views.css">
 
     <title>Продам принтер HP 1010 как новый!</title>
 </head>
 <body>
-<header>
-    <!--Меню для маленьких экранов-->
-    <nav class="navbar d-md-none navbar-expand-md navbar-dark sticky-top">
-        <div class="container-fluid">
-            <a href="#" class="navbar-brand">ProdaiZIP.ru</a>
-            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#search">
-                <i class="fa fa-search"></i>
-            </button>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#profile">
-                <i class="fa fa-user"></i>
-            </button>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu">
-                <i class="fa fa-list"></i>
-            </button>
-        </div>
-        <div class="collapse navbar-collapse" id="search">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <form class="form">
-                        <label for="searchInput">Что вы ищете</label>
-                        <input id="searchInput" class="form-control " type="search" placeholder="Введите слово для поиска">
-                        <label for="searchCategory">Категория</label>
-                        <select class="form-control" id="searchCategory">
-                            <option>Принтеры/копиры</option>
-                            <option>Телефоны</option>
-                            <option>Планшеты</option>
-                            <option>Ноутбуки</option>
-                            <option>Мониторы/телевизоры</option>
-                            <option>Компьютеры/комплектующие</option>
-                            <option>Расходные материалы</option>
-                            <option>Прочее</option>
-                        </select>
-                        <label for="searchCity">Местоположение</label>
-                        <input id="searchCity" class="form-control " type="text" placeholder="Город">
-                        <button class="btn btn-success" type="submit">Поиск</button>
-                        <button class="btn btn-danger" type="submit">Сброс</button>
-                    </form>
-                </li>
-            </ul>
-        </div>
-        <div class="collapse navbar-collapse" id="profile">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Войти</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Зарегистрироваться</a>
-                </li>
-            </ul>
-        </div>
-        <div class="collapse navbar-collapse" id="menu">
-            <ul class="navbar-nav">
-                <div class="nav-item nav-item-mobile">
-                    <a class="nav-link btn btn-success btn-sm" href="#"><i class="fa fa-plus-circle"></i> Добавить объявление</a>
-                    <a class="nav-link btn btn-sm btn-danger" href="#"><i class="fa fa-plus-circle"></i> Добавить горячий запрос</a>
-                </div>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Главная</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Все объявления</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Услуги</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Обратная связь</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">О компании</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <!--Меню и поиск-->
-    <div class="container">
-        <!--Верхнее меню-->
-        <div class="row">
-            <div class="d-none d-md-block col-md-12 text-right menu_top align-items-center">
-                <a href="#">
-                    <img class="logo2" src="../img/logo.png" alt="ProdaiZip.ru">
-                </a>
-                <a href="#">
-                <span class="fa-stack fa-1x has-badge" data-count="4">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-bell fa-stack-1x"></i>
-                </span>
-                </a>
-                <a href="#">
-                <span class="fa-stack fa-1x has-badge" data-count="4">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-search fa-stack-1x"></i>
-                </span>
-                </a>
-                <a href="#">
-                <span class="fa-stack fa-1x has-badge" data-count="4">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-list fa-stack-1x"></i>
-                </span>
-                </a>
-                <a href="#">
-                <span class="fa-stack fa-1x has-badge" data-count="4">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-comment fa-stack-1x"></i>
-                </span>
-                </a>
-                <a href="#" class="notice">
-                <span class="fa-stack fa-1x has-badge" data-count="6">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-star fa-stack-1x"></i>
-                </span>
-                </a>
-                <a href="#" class="btn btn-info">
-                    Выйти
-                </a>
-                <a href="#" class="profileimg log-in">
-                    <img src="../img/840px-Elon-musk-850.jpg" alt="Профиль">
-                </a>
-                <a href="#" class="btn btn-danger">
-                    Подать объявление
-                </a>
-            </div>
-        </div>
-        <!--Блок поиска-->
-        <form action="#">
-            <div class="row search">
-                <div class="col-12 col-md-4 col-lg-3">
-                    <select class="form-control" id="selectCategory">
-                        <option>Принтеры/копиры</option>
-                        <option>--Продажа принтеров/копиров</option>
-                        <option>--Принтеры/копиры на запчасти</option>
-                        <option>--Запчасти для принтеров/копиров</option>
-                        <option>----Блоки лазера/сканера/Сканирующие линейки</option>
-                        <option>----Блоки питания</option>
-                        <option>----Блоки проявки</option>
-                    </select>
-                </div>
-                <div class="col-12 col-md-8 col-lg-6">
-                    <input type="text" class="form-control" placeholder="Что вы ищете">
-                </div>
-                <div class="col-12 col-md-4 col-lg-2">
-                    <input type="text" class="form-control" placeholder="Местоположение">
-                </div>
-                <div class="col-12 col-md-4 col-lg-1">
-                    <button type="submit" class="btn btn-warning search_btn-search">Поиск</button>
-                </div>
-            </div>
-        </form>
-    </div>
-</header>
 
+
+<!-- Верхнее меню -->
+<div class="container sticky-top px-0 menutop">
+    <nav class="navbar navbar-expand-md navbar-dark px-3 px-md-0">
+        <!-- для больших экранов -->
+        <div class="d-none d-md-flex mr-auto">
+            <a href="#page" class="navbar-brand mr-0">
+                <img src="../img/logo.png" alt="ProdaiZip.ru">
+            </a>
+        </div>
+        <div class="d-none d-md-flex align-items-center">
+
+            <a href="#page" class="px-1">
+                <span class="fa-stack fa-1x">
+                    <span class="fa fa-circle fa-stack-2x"></span>
+                    <span class="fa fa-bell fa-stack-1x"></span>
+                </span>
+                <span class="badge badge-pill badge-danger">5</span>
+            </a>
+
+            <a href="#page" class="px-1">
+                <span class="fa-stack fa-1x">
+                    <span class="fa fa-circle fa-stack-2x"></span>
+                    <span class="fa fa-search fa-stack-1x"></span>
+                </span>
+                <span class="badge badge-pill badge-danger">4</span>
+            </a>
+
+            <a href="#page" class="px-1">
+                <span class="fa-stack fa-1x">
+                    <span class="fa fa-circle fa-stack-2x"></span>
+                    <span class="fa fa-list fa-stack-1x"></span>
+                </span>
+                <span class="badge badge-pill badge-danger">2</span>
+            </a>
+
+            <a href="#page" class="px-1">
+                <span class="fa-stack fa-1x">
+                    <span class="fa fa-circle fa-stack-2x"></span>
+                    <span class="fa fa-comment fa-stack-1x"></span>
+                </span>
+                <span class="badge badge-pill badge-danger">6</span>
+            </a>
+
+            <a href="#page" class="notice border-right mr-2 px-1">
+                <span class="fa-stack fa-1x has-badge">
+                    <span class="fa fa-circle fa-stack-2x"></span>
+                    <span class="fa fa-star fa-stack-1x"></span>
+                </span>
+                <span class="badge badge-pill badge-danger">8</span>
+            </a>
+
+            <button type="button" class="btn btn-info">
+                Выйти
+            </button>
+
+            <a href="#page" class="profile_img label_log-in px-2 mx-1">
+                <img src="../img/840px-Elon-musk-850.jpg" alt="Профиль">
+            </a>
+
+            <a href="#page" class="nav-link btn btn-danger py-1 py-lg-2 px-md-2 px-lg-3">
+                Подать объявление
+            </a>
+        </div>
+        <!-- для маленьких экранов -->
+        <a href="#page" class="navbar-brand d-inline-block d-md-none mr-auto">ProdaiZIP.ru</a>
+        <!-- кнопка Поиска -->
+        <button class="navbar-toggler mx-1" type="button" data-toggle="collapse" data-target="#search">
+            <span class="fa fa-search"></span>
+        </button>
+        <!-- кнопка Аккаунт -->
+        <button class="navbar-toggler mx-1" type="button" data-toggle="collapse" data-target="#profile">
+            <span class="fa fa-user"></span>
+        </button>
+        <!-- кнопка Меню -->
+        <button class="navbar-toggler mx-1" type="button" data-toggle="collapse" data-target="#menu">
+            <span class="fa fa-list"></span>
+        </button>
+        <!-- раскрывающийся блок Поиска -->
+        <span class="d-md-none">
+            <div class="collapse navbar-collapse" id="search">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <form class="form">
+                            <label for="searchInput">Что вы ищете</label>
+                            <input id="searchInput" class="form-control mb-3" type="search" placeholder="Введите слово для поиска">
+                            <label for="searchCategory">Категория</label>
+                            <select class="form-control mb-3" id="searchCategory">
+                                <option>Принтеры/копиры</option>
+                                <option>Телефоны</option>
+                                <option>Планшеты</option>
+                                <option>Ноутбуки</option>
+                                <option>Мониторы/телевизоры</option>
+                                <option>Компьютеры/комплектующие</option>
+                                <option>Расходные материалы</option>
+                                <option>Прочее</option>
+                            </select>
+                            <label for="searchCity">Местоположение</label>
+                            <input id="searchCity" class="form-control mb-3" type="text" placeholder="Город">
+                            <button class="btn btn-success" type="submit">Поиск</button>
+                            <button class="btn btn-danger" type="submit">Сброс</button>
+                        </form>
+                    </li>
+                </ul>
+            </div>
+        </span>
+        <!-- раскрывающийся блок Аккаунта -->
+        <span class="d-md-none">
+            <div class="collapse navbar-collapse" id="profile">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#page">Войти</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#page">Зарегистрироваться</a>
+                    </li>
+                </ul>
+            </div>
+        </span>
+        <!-- раскрывающийся блок Меню -->
+        <span class="d-md-none">
+            <div class="collapse navbar-collapse" id="menu">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="btn btn-success btn-sm btn-full-width my-2 py-2" href="#page"><span class="fa fa-plus-circle"></span> Добавить объявление</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-sm btn-danger btn-full-width py-2" href="#page"><span class="fa fa-plus-circle"></span> Добавить горячий запрос</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#page">Главная</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#page">Все объявления</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#page">Услуги</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#page">Обратная связь</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#page">О компании</a>
+                    </li>
+                </ul>
+            </div>
+        </span>
+
+    </nav>
+</div>
+<!--Блок поиска-->
+<div class="container">
+    <form action="#">
+        <div class="form-row search-small">
+            <div class="col-12 col-md-4 col-lg-3">
+                <select class="form-control" id="selectCategory">
+                    <option>Принтеры/копиры</option>
+                    <option>--Продажа принтеров/копиров</option>
+                    <option>--Принтеры/копиры на запчасти</option>
+                    <option>--Запчасти для принтеров/копиров</option>
+                    <option>----Блоки лазера/сканера/Сканирующие линейки</option>
+                    <option>----Блоки питания</option>
+                    <option>----Блоки проявки</option>
+                </select>
+            </div>
+            <div class="col-12 col-md-8 col-lg-6">
+                <input type="text" class="form-control" placeholder="Что вы ищете">
+            </div>
+            <div class="col-12 col-md-4 col-lg-2">
+                <input type="text" class="form-control" placeholder="Местоположение">
+            </div>
+            <div class="col-12 col-md-4 col-lg-1">
+                <button type="submit" class="btn btn-warning">Поиск</button>
+            </div>
+        </div>
+    </form>
+</div>
+<!-- Хлебные крошки -->
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Главная</a></li>
+                <li class="breadcrumb-item"><a href="#">Принтеры / копиры</a></li>
+                <li class="breadcrumb-item">Продажа принтеров / копиров</li>
+                <li class="breadcrumb-item active">Продам принтер HP 1010 как новый!</li>
+            </ol>
+        </nav>
+        </div>
+    </div>
+</div>
 <!--Основной контент сайта-->
  <div class="container ads-block">
-     <!-- Хлебные крошки -->
-     <div class="row">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#">Главная</a></li>
-                    <li class="breadcrumb-item"><a href="#">Принтеры / копиры</a></li>
-                    <li class="breadcrumb-item"><a href="#">Продажа принтеров</a></li>
-                    <li class="breadcrumb-item active">Продам принтер HP 1010 как новый!</li>
-                </ol>
-            </nav>
-        </div>
      <!-- Контент -->
      <div class="row">
          <!-- Заголовок раздела -->
@@ -341,7 +373,7 @@
  </div>
 <!--Подвал сайта-->
 <footer>
-    <div class="container-fluid podval">
+    <div class="container-fluid footer">
         <div class="row justify-content-around">
             <div class="col-12 text-center priziv">
                 <h2>Начните зарабатывать сейчас</h2>
@@ -375,7 +407,7 @@
                 <p><a href="#">Кошелек</a></p>
                 <p><a href="#">Профиль</a></p>
             </div>
-            <div class="col-12 podvalCopyright">
+            <div class="col-12 footerCopyright">
                 <hr>
                 <h6>Пользование сервисами сайта, в том числе подача объявлений, означает принятие условий <a href="#">пользовательского соглашения</a></h6>
                 <h6>Все права защищены. ProdaiZIP©</h6>
