--- a/pages/add_ad.html
+++ b/pages/add_ad.html
@@ -250,6 +250,50 @@
                                     </select>
                                 </div>
                             </div>
+                            <div class="form-row pt-3">
+                                <div class="col-lg-3">
+                                    <label for="select-equip-condition">Состояние:</label>
+                                </div>
+                                <div class="col-12 col-md-4 col-lg-3">
+                                    <select class="form-control" id="select-equip-condition">
+                                        <option>Новое</option>
+                                        <option>Б/У</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-row pt-3">
+                                <div class="col-lg-3">
+                                    <label for="select-perfomance">Работоспособность:</label>
+                                </div>
+                                <div class="col-12 col-md-4 col-lg-3">
+                                    <select class="form-control" id="select-perfomance">
+                                        <option>Работает</option>
+                                        <option>Не работает</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-row pt-3">
+                                <div class="col-lg-3">
+                                    <label for="select-manufacturer">Производитель:</label>
+                                </div>
+                                <div class="col-12 col-md-4 col-lg-3">
+                                    <select class="form-control" id="select-manufacturer">
+                                        <option>Работает</option>
+                                        <option>Не работает</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-row pt-3">
+                                <div class="col-lg-3">
+                                    <label for="select-model">Модель:</label>
+                                </div>
+                                <div class="col-12 col-md-4 col-lg-3">
+                                    <select class="form-control" id="select-model">
+                                        <option>Работает</option>
+                                        <option>Не работает</option>
+                                    </select>
+                                </div>
+                            </div>
                         </form>
                     </div>
                 </div>
