Начал работу над страницей добавления объявления

--- a/pages/add_ad.html
+++ b/pages/add_ad.html
@@ -278,8 +278,9 @@
                                 </div>
                                 <div class="col-12 col-md-4 col-lg-3">
                                     <select class="form-control" id="select-manufacturer">
-                                        <option>Работает</option>
-                                        <option>Не работает</option>
+                                        <option>HP</option>
+                                        <option>Canon</option>
+                                        <option>Свой вариант</option>
                                     </select>
                                 </div>
                             </div>
@@ -289,9 +290,26 @@
                                 </div>
                                 <div class="col-12 col-md-4 col-lg-3">
                                     <select class="form-control" id="select-model">
-                                        <option>Работает</option>
-                                        <option>Не работает</option>
+                                        <option>LJ 1010</option>
+                                        <option>LJ 1200</option>
+                                        <option>Свой вариант</option>
                                     </select>
+                                </div>
+                            </div>
+                            <div class="form-row pt-3">
+                                <div class="col-lg-3">
+                                    <label for="input-description">Описание:</label>
+                                </div>
+                                <div class="col-12 col-md-4 col-lg-9">
+                                    <textarea id="input-description" class="form-control" placeholder="Введите описание объявления"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-row pt-3">
+                                <div class="col-lg-3">
+                                    <label>Технические характеристики:</label>
+                                </div>
+                                <div class="col-12 col-md-4 col-lg-9">
+                                    <textarea id="input-description" class="form-control" placeholder="Введите описание объявления"></textarea>
                                 </div>
                             </div>
                         </form>
